# ofchecker

./: CMakeLists.txt  Makefile.am  README.md  configure.ac  configure.in  generate_configure.sh
src/: CMakeLists.txt  Makefile  backtrace.c  ofchecker.c  test.c
test/: CMakeLists.txt  test.c
