#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(ofchecker, 0.0.1, hoge@hoge.com)
AM_INIT_AUTOMAKE #(ofchecker, 1.0.0, no-define)
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([src/ofchecker.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([malloc.h stdlib.h string.h syslog.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset])

LT_INIT

AC_PROG_RANLIB
AC_OUTPUT
